--- a/package.json
+++ b/package.json
@@ -2,25 +2,28 @@
   "name": "black-is-down",
   "version": "0.1.0",
   "description": "Emoji-based charades.",
-  "keywords": ["emoji, game"],
+  "keywords": [
+    "emoji, game"
+  ],
   "homepage": "https://github.com/benjeh32/black-is-down",
-  "main": "src/index.js",
+  "private": true,
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "budo src/index.js:bin/bundle.js --live --open --port 3232 --host localhost -- -t babelify",
-    "build": "browserify src/index.js -t babelify | uglifyjs -cm > bin/bundle.js"
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
+    "build": "webpack"
   },
-  "repository": "github:benjeh32/emojiscribe",
+  "repository": "github:benjeh32/black-is-down",
   "dependencies": {
-    "emojiscribe": "^0.1.0"
+    "emojiscribe": "^0.1.0",
+    "jquery": "^3.3.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babelify": "^8.0.0",
-    "browserify": "^16.2.2",
-    "budo": "^11.3.0",
-    "uglify-js": "^3.4.1"
+    "css-loader": "^0.28.11",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.14.0",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-cli": "^3.0.8"
   }
 }
