--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
+    "handlebars": "^4.0.11",
+    "handlebars-loader": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.14.0",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   }
 }
