--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "repository": "github:benjeh32/black-is-down",
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "emojiscribe": "^0.1.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3"
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
